updating the marketplace /shop Component

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   class="bg-base-content flex justify-between items-center px-4 py-2 text-base-100"
 >
   <div class="text-sm text-gray">Free shipping & returns</div>
-  <div>BLACK FRIDAY IS COMING</div>
-  <div class="text-sm text-gray">Customer Service</div>
+  <div class="font-bold">BLACK FRIDAY IS COMING</div>
+  <div class="text-sm text-gray">Glide's Customer Service</div>
 </nav>
 <div class="sticky bg-base-100 backdrop-blur-lg top-0 z-10">
   <nav>
