--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,39 +1,113 @@
-<div class="hero min-h-[20rem] carousel w-full">
-  <!-- Carousel Item 1 -->
-  <div id="slide1" class="carousel-item relative w-full">
-    <div
-      class="hero min-h-[20rem]"
-      style="
-        background-image: url(../../../assets/fast-fashion-concept-with-woman-shopping_23-2150871375.jpg);
-      "
-    >
-      <div class="hero-overlay bg-opacity-50"></div>
-      <div class="hero-content text-center text-white h-full">
-        <div class="w-full h-full">
-          <div class="flex justify-between">
-            <div class="flex flex-col items-start p-2 text-xl">
-              <h1>LATEST TRENDS IN FASHION</h1>
-              <h1>E-COMMERCE SHOP</h1>
+<div class="hero min-h-[20rem]">
+  <div class="carousel w-full">
+    <!-- Carousel Item 1 -->
+    <div id="slide1" class="carousel-item relative w-full">
+      <div
+        class="hero min-h-[20rem]"
+        style="
+          background-image: url(../../../assets/woman-front-fast-fashion-merchandise-pile_23-2150951215.jpg);
+        "
+      >
+        <div class="hero-overlay bg-opacity-50"></div>
+        <div class="hero-content text-center text-white h-full">
+          <div class="w-full h-full">
+            <div class="flex justify-between">
+              <div class="flex flex-col items-start p-2 text-xl">
+                <h1>LATEST TRENDS IN FASHION</h1>
+                <h1>E-COMMERCE SHOP</h1>
+              </div>
+              <div class="flex flex-col items-end p-2 text-md">
+                <h1 class="text-gray text-lg">LAAKRI</h1>
+              </div>
             </div>
-            <div class="flex flex-col items-end p-2 text-md">
-              <h1 class="text-gray text-lg">LAAKRI</h1>
-            </div>
-          </div>
-          <h1
-            class="mb-5 text-[5rem] sm:text-[10rem] md:text-[15rem] lg:text-[20rem] font-bold"
-          >
-            GLIDE
-          </h1>
+            <h1
+              class="mb-5 text-[5rem] sm:text-[10rem] md:text-[15rem] lg:text-[20rem] font-bold"
+            >
+              GLIDE
+            </h1>
 
-          <button class="btn">Shop Now</button>
+            <button class="btn">Shop Now</button>
+          </div>
         </div>
       </div>
+      <div
+        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+      >
+        <a href="#slide3" class="btn btn-circle">❮</a>
+        <a href="#slide2" class="btn btn-circle">❯</a>
+      </div>
     </div>
-    <div
-      class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
-    >
-      <a href="#slide4" class="btn btn-circle">❮</a>
-      <a href="#slide2" class="btn btn-circle">❯</a>
+    <div id="slide2" class="carousel-item relative w-full">
+      <div
+        class="hero min-h-[20rem]"
+        style="
+          background-image: url(../../../assets/fast-fashion-concept-with-woman-shopping_23-2150871375.jpg);
+        "
+      >
+        <div class="hero-overlay bg-opacity-50"></div>
+        <div class="hero-content text-center text-white h-full">
+          <div class="w-full h-full">
+            <div class="flex justify-between">
+              <div class="flex flex-col items-start p-2 text-xl">
+                <h1>LATEST TRENDS IN FASHION</h1>
+                <h1>E-COMMERCE SHOP</h1>
+              </div>
+              <div class="flex flex-col items-end p-2 text-md">
+                <h1 class="text-gray text-lg">LAAKRI</h1>
+              </div>
+            </div>
+            <h1
+              class="mb-5 text-[5rem] sm:text-[10rem] md:text-[15rem] lg:text-[20rem] font-bold"
+            >
+              GLIDE
+            </h1>
+
+            <button class="btn">Shop Now</button>
+          </div>
+        </div>
+      </div>
+      <div
+        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+      >
+        <a href="#slide1" class="btn btn-circle">❮</a>
+        <a href="#slide3" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+    <div id="slide3" class="carousel-item relative w-full">
+      <div
+        class="hero min-h-[20rem]"
+        style="
+          background-image: url(../../../assets/6209f8872c74d76a27d98c5adb760eec.jpg);
+        "
+      >
+        <div class="hero-overlay bg-opacity-50"></div>
+        <div class="hero-content text-center text-white h-full">
+          <div class="w-full h-full">
+            <div class="flex justify-between">
+              <div class="flex flex-col items-start p-2 text-xl">
+                <h1>LATEST TRENDS IN FASHION</h1>
+                <h1>E-COMMERCE SHOP</h1>
+              </div>
+              <div class="flex flex-col items-end p-2 text-md">
+                <h1 class="text-gray text-lg">LAAKRI</h1>
+              </div>
+            </div>
+            <h1
+              class="mb-5 text-[5rem] sm:text-[10rem] md:text-[15rem] lg:text-[20rem] font-bold"
+            >
+              GLIDE
+            </h1>
+
+            <button class="btn">Shop Now</button>
+          </div>
+        </div>
+      </div>
+      <div
+        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+      >
+        <a href="#slide2" class="btn btn-circle">❮</a>
+        <a href="#slide1" class="btn btn-circle">❯</a>
+      </div>
     </div>
   </div>
 </div>
