adding the dashboard stats and chats for the admin

--- a/src/app/BackOfficePages/AdminSection/admin-panel/adminpanel.component.html
+++ b/src/app/BackOfficePages/AdminSection/admin-panel/adminpanel.component.html
@@ -21,7 +21,7 @@
           </a>
         </li>
         <li>
-          <a href="/dashboard/add-product" class="btn btn-ghost btn-sm w-full">
+          <a href="/A/add-product" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li>
-          <a href="/dashboard/list-product" class="btn btn-ghost btn-sm w-full">
+          <a href="/A/list-product" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -57,7 +57,7 @@
           </a>
         </li>
         <li>
-          <a href="/dashboard/list-order" class="btn btn-ghost btn-sm w-full">
+          <a href="/A/list-order" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -76,7 +76,7 @@
         </li>
 
         <li>
-          <a href="/dashboard/categories" class="btn btn-ghost btn-sm w-full">
+          <a href="/A/categories" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -94,7 +94,7 @@
           </a>
         </li>
         <li>
-          <a href="/dashboard/list-report" class="btn btn-ghost btn-sm w-full">
+          <a href="/A/list-report" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
