--- a/src/app/Pages/marketplace/marketplace.component.html
+++ b/src/app/Pages/marketplace/marketplace.component.html
@@ -198,7 +198,7 @@
                 [routerLink]="['/product', product.product.id]"
                 class="hover:underline"
               >
-                <h2 class="card-title line-clamp-2 h-16">
+                <h2 class="card-title line-clamp-2 max-h-16">
                   {{ product.product.name }}
                 </h2>
               </a>
