--- a/src/app/BackOfficePages/AdminSection/admin-panel/adminpanel.component.html
+++ b/src/app/BackOfficePages/AdminSection/admin-panel/adminpanel.component.html
@@ -3,7 +3,7 @@
     <div>
       <ul class="space-y-6">
         <li>
-          <a href="/" class="btn btn-ghost btn-sm w-full">
+          <a href="/A/dashboard" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
