update the navbar component

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -237,9 +237,9 @@
           >Dashboard</a
         >
         <div class="flex items-center px-5">
-          <div class="flex-shrink-0">
-            <img class="h-6 w-auto" src="../../assets/squi-arrow.png" />
-          </div>
+          <!-- <div class="flex-shrink-0">
+            <img class="h-6 w-auto" src="../../../assets/dark-squi-arrow.png" />
+          </div> -->
           <div class="ml-3">
             <div class="text-base font-medium leading-none">User</div>
             <div class="text-sm font-medium leading-none text-gray">
